# chatGPT-discord-bot

./: .env.example  .gitignore  Dockerfile  MEMORY_PLAN.md  MULTI_CONTEXT_GUIDE.md  PHASE1_COMPLETE.md  VOICE_INTEGRATION_PLAN.md  WARP.md  docker-compose.yml  extract_espn.py  gpt5_settings.json  main.py  pyproject.toml  requirements.in  requirements.txt  system_prompt.txt  test_memory_phase1.py  test_memory_phase3.py
audio_cache/: .gitkeep
src/: aclient.py  bot.py  conversation_manager.py  sports.py
src/commands/: actions.py  context.py  game_notifications.py  meme.py  news.py  sports.py  tictactoe.py  weather.py
src/memory/: README.md  __init__.py  extractor.py  models.py  storage.py
src/voice/: __init__.py  audio_sink.py  voice_manager.py
utils/: message_utils.py  tstapi.py  tstbot.py
